--- a/ThietKeWeb/Views/Home/LogIn.cshtml
+++ b/ThietKeWeb/Views/Home/LogIn.cshtml
@@ -15,6 +15,7 @@
           href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
     <title>Signup</title>
     <link href="~/Content/stylesheet1.css" rel="stylesheet" />
+    <link href="~/Content/stylesheet1.css" rel="stylesheet" />
 </head>
 <body>
     <div class="login">
@@ -32,7 +33,7 @@
             <button class="login-submit">Login</button>
         </form>
         <p class="login-already">
-            <a href="" class="login-already">Forgot password?</a>
+            <a href="" >Forgot password?</a>
             <a href="~/Home/Register" class="login-login-link">Sign up</a>
         </p>
     </div>
