--- a/ThietKeWeb/Views/Home/ProductList.cshtml
+++ b/ThietKeWeb/Views/Home/ProductList.cshtml
@@ -1,6 +1,6 @@
 ﻿
 @{
-    ViewBag.Title = "ProDuctDetail";
+    ViewBag.Title = "ProductList";
     Layout = "~/Views/Shared/MasterLayout.cshtml";
 }
 
@@ -35,46 +35,46 @@
         <ul class="list">
             <li><a href="~/Home/Index" class="menu1">Trang chủ</a></li>
             <li class="dropdown-btn">
-                <a href="~/Home/ProDuctDetail" class="menu2">Thực đơn</a>
+                <a href="~/Home/ProductList" class="menu2">Thực đơn</a>
                 <ul class="dropdown-content">
                     <li class="dropdown-content-list">
-                        <a href="~/Home/ProDuctDetail" class="content1">Cà phê</a>
+                        <a href="~/Home/ProductList" class="content1">Cà phê</a>
                         <ul class="prod-name">
-                            <li class="prod-name-list"><a href="">Cà phê đen</a></li>
-                            <li class="prod-name-list"><a href="">Bạc Xỉu</a></li>
-                            <li class="prod-name-list"><a href="">Cà phê Caramel</a></li>
+                            <li class="prod-name-list"><a href="" class="prod-name-a">Cà phê đen</a></li>
+                            <li class="prod-name-list"><a href="" class="prod-name-a">Bạc Xỉu</a></li>
+                            <li class="prod-name-list"><a href="" class="prod-name-a">Cà phê Caramel</a></li>
                         </ul>
                     </li>
                     <li class="dropdown-content-list">
-                        <a href="~/Home/ProDuctDetail" class="content2">Trà</a>
+                        <a href="~/Home/ProductList" class="content2">Trà</a>
                         <ul class="prod-name">
-                            <li class="prod-name-list"><a href="">Trà Dâu</a></li>
-                            <li class="prod-name-list"><a href="">Trà Thạch Dâu</a></li>
-                            <li class="prod-name-list"><a href="">Trà Nho</a></li>
-                            <li class="prod-name-list"><a href="">Trà Vải</a></li>
-                            <li class="prod-name-list"><a href="">Trà Đen</a></li>
+                            <li class="prod-name-list"><a href="" class="prod-name-a">Trà Dâu</a></li>
+                            <li class="prod-name-list"><a href="" class="prod-name-a">Trà Thạch Dâu</a></li>
+                            <li class="prod-name-list"><a href="" class="prod-name-a">Trà Nho</a></li>
+                            <li class="prod-name-list"><a href="" class="prod-name-a">Trà Vải</a></li>
+                            <li class="prod-name-list"><a href="" class="prod-name-a">Trà Đen</a></li>
                         </ul>
                     </li>
                     <li class="dropdown-content-list">
-                        <a href="~/Home/ProDuctDetail" class="content1">Đá Xay</a>
+                        <a href="~/Home/ProductList" class="content1">Đá Xay</a>
                         <ul class="prod-name">
-                            <li class="prod-name-list"><a href="">Orio Đá Xay</a></li>
-                            <li class="prod-name-list"><a href="">Milo Đá Xay</a></li>
-                            <li class="prod-name-list"><a href="">Socola Đá Xay</a></li>
-                            <li class="prod-name-list"><a href="">Caramel Đá Xay</a></li>
-                            <li class="prod-name-list"><a href="">Dâu Đá Xay</a></li>
-                            <li class="prod-name-list"><a href="">Match Socola Đá Xay</a></li>
+                            <li class="prod-name-list"><a href="" class="prod-name-a">Orio Đá Xay</a></li>
+                            <li class="prod-name-list"><a href="" class="prod-name-a">Milo Đá Xay</a></li>
+                            <li class="prod-name-list"><a href="" class="prod-name-a">Socola Đá Xay</a></li>
+                            <li class="prod-name-list"><a href="" class="prod-name-a">Caramel Đá Xay</a></li>
+                            <li class="prod-name-list"><a href="" class="prod-name-a">Dâu Đá Xay</a></li>
+                            <li class="prod-name-list"><a href="" class="prod-name-a">Match Socola Đá Xay</a></li>
                         </ul>
                     </li>
                     <li class="dropdown-content-list">
-                        <a href="~/Home/ProDuctDetail" class="content3">Khác</a>
+                        <a href="~/Home/ProductList" class="content3">Khác</a>
                         <ul class="prod-name">
-                            <li class="prod-name-list"><a href="">Matcha</a></li>
-                            <li class="prod-name-list"><a href="">Chanh Tắc Mật Ong</a></li>
-                            <li class="prod-name-list"><a href="">Soda Chanh</a></li>
-                            <li class="prod-name-list"><a href="">Sữa Tươi Trân Châu Đường Nâu</a></li>
-                            <li class="prod-name-list"><a href="">Trà Sữa Truyền Thống</a></li>
-                            <li class="prod-name-list"><a href="">Trà Sữa Trân Châu Trắng</a></li>
+                            <li class="prod-name-list"><a href="" class="prod-name-a">Matcha</a></li>
+                            <li class="prod-name-list"><a href="" class="prod-name-a">Chanh Tắc Mật Ong</a></li>
+                            <li class="prod-name-list"><a href="" class="prod-name-a">Soda Chanh</a></li>
+                            <li class="prod-name-list"><a href="" class="prod-name-a">Sữa Tươi Trân Châu Đường Nâu</a></li>
+                            <li class="prod-name-list"><a href="" class="prod-name-a">Trà Sữa Truyền Thống</a></li>
+                            <li class="prod-name-list"><a href="" class="prod-name-a">Trà Sữa Trân Châu Trắng</a></li>
                         </ul>
                     </li>
                 </ul>
@@ -262,3 +262,4 @@
     Powered by Ella and Fahasha
     <p>About - Services - Portfolio - Contact Us - Term of Trade</p>
 </footer>
+
