--- a/ThietKeWeb/Views/Home/Index.cshtml
+++ b/ThietKeWeb/Views/Home/Index.cshtml
@@ -3,7 +3,337 @@
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/MasterLayout.cshtml";
 }
+<style type="text/css">
+    * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+    }
 
+    body {
+        font-family: Arial, sans-serif;
+        font-size: 30px;
+        font-weight: bold;
+        background-color: #f0f0f0;
+    }
+
+    .header {
+        margin-top: 4px;
+        width: 100%;
+        background-color: #b22830;
+        display: flex;
+        flex-wrap: wrap;
+        align-items: center;
+    }
+
+    .logo {
+        width: 251px;
+        height: 80px;
+    }
+
+    .head-middle {
+        position: relative;
+    }
+
+    .search {
+        margin-left: 35px;
+        border: 1px solid #ccc;
+        border-radius: 8px;
+        width: 450px;
+        padding: 10px;
+        outline: none;
+    }
+
+    .search-button {
+        position: absolute;
+        right: 0;
+        top: 0;
+        bottom: 0;
+        border: none;
+        cursor: pointer;
+        width: 70px;
+        height: 29px;
+        border-radius: 8px;
+        margin: 4px 4px 0 0;
+    }
+
+    .search-image {
+        width: 70px;
+        height: 29px;
+        border-radius: 8px;
+    }
+
+    .cart {
+        position: relative;
+    }
+
+    .cart-count {
+        position: absolute;
+        right: -17px;
+        top: -3px;
+        background-color: red;
+        color: white;
+        border-radius: 45%;
+    }
+
+    ul {
+        display: flex;
+    }
+
+    .menu {
+        margin-left: 35px;
+    }
+
+    li {
+        list-style-type: none;
+    }
+
+    .menu a {
+        color: white;
+        font-size: 18px;
+        text-decoration: none;
+    }
+
+    #selection {
+        margin-right: 35px;
+        color: white;
+    }
+
+    .selection-image {
+        width: 20px;
+        height: 20px;
+        margin-right: 4px;
+    }
+
+    .image1 {
+        display: block;
+        width: 100%;
+        height: 50%;
+        border-radius: 2px;
+    }
+
+    .image2 {
+        display: block;
+        width: 100%;
+        height: 50%;
+        border-radius: 2px;
+    }
+
+    .ad {
+        clear: both;
+        display: flex;
+        align-items: center;
+    }
+
+
+    .list-background {
+        display: flex;
+        width: 100%;
+    }
+
+    .list {
+        display: flex;
+        align-items: center;
+    }
+
+    .menu1 {
+        color: white;
+        margin-left: 320px;
+        transition: all 0.2s ease;
+    }
+
+        .menu1:hover {
+            display: block;
+            background-color: #53382C;
+        }
+    .menu2 {
+        margin-left:150px;
+        color: white;
+        transition: all 0.2s ease;
+    }
+
+        .menu2:hover {
+            display: block;
+            background-color: #53382C;
+            block-size:40px;
+        }
+
+    .menu3 {
+        margin-left: 150px;
+        color: white;
+        transition: all 0.2s ease;
+    }
+
+        .menu3:hover {
+            display: block;
+            background-color: #53382C;
+        }
+    .list li {
+        cursor: pointer;
+        position: relative;
+    }
+
+    .dropdown-content {
+        display: none;
+        position: absolute;
+        list-style-type: none;
+        z-index: 1;
+        left: -393px;
+        top: 100%;
+    }
+        .dropdown-content-list {
+            width: 312px;
+            height:200px;
+            margin-top:15px;
+            
+        }
+    .dropdown-content a {
+        text-decoration: none;
+        transition: all 0.2s ease;
+        color:#ffcc00;
+    }
+    .content1 {
+        margin-left: 130px;
+    }
+
+    .content2 {
+        margin-left: 145px;
+    }
+
+    .content3 {
+        margin-left: 140px;
+    }
+         .dropdown-content li a:hover {
+            letter-spacing:2px;   
+            background-color: inherit; 
+        }
+    .dropdown-btn:hover .dropdown-content {
+        display: flex;
+        background-color: #53382C;
+    }
+    .dropdown-content{
+        background-color:transparent;
+        transition: all 0.6s ease;
+    }
+    .prod-name{
+        display:flow;
+    }
+    .prod-name-list{
+        text-align:center;
+        text-decoration:none;
+    }
+    .prod-name a {
+        color: white;
+        position: relative;
+        text-decoration: none;
+        transition: all 0.2s ease;
+        padding-left: 10px;
+    }
+
+        .prod-name li a:hover {
+            letter-spacing:1px;
+            color: lightpink;
+        }
+
+        .prod-name li a::after {
+            position: absolute;
+            content: '\203A';
+            left: -80px;
+            opacity: 0;
+            transition: opacity 0.3s ease;
+        }
+
+        .prod-name  li a:hover::after {
+            opacity: 1;
+        }
+
+    #featureProd {
+        text-align: center;
+        background-color: #f0f0f0;
+        clear: both;
+    }
+
+    .prod-list {
+        width: 100%;
+        background-color: yellowgreen;
+        height: 30px;
+        margin-bottom: 20px;
+    }
+
+    h2 {
+        font-size: 20px;
+        vertical-align: middle;
+    }
+
+    .prod-container {
+        display: flex;
+        align-items: center;
+    }
+
+    .prod {
+        width: 200px;
+    }
+
+    .prod-item {
+        width: 100%;
+        height: 150px;
+        transition: transform 0.2s ease;
+    }
+
+        .prod-item:hover {
+            letter-spacing: 1px;
+            transform: translateY(-5px);
+        }
+
+    .prod-item-special1 {
+        width: 100px;
+        height: 150px;
+        transition: transform 0.2s ease;
+    }
+
+        .prod-item-special1:hover {
+            letter-spacing: 1px;
+            transform: translateY(-5px);
+        }
+
+    .prod-item-special2 {
+        width: 150px;
+        height: 150px;
+        transition: transform 0.2s ease;
+    }
+
+        .prod-item-special2:hover {
+            letter-spacing: 1px;
+            transform: translateY(-5px);
+        }
+
+    h3 {
+        font-size: 16px;
+        color: yellowgreen;
+    }
+
+    .prod-description {
+        font-size: 14px;
+        color: black;
+        font: Arial;
+    }
+
+    .prod-price {
+        font-size: 12px;
+        color: green;
+    }
+
+    #footer {
+        margin-top: 15px;
+        background-color: #5e311e;
+        color: white;
+        font-size: 18px;
+        clear: both;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+</style>
 <header class="header">
     <a href="~/Home/Index"><img src="~/Content/images/logo1.png" class="logo" /></a>
     <div class="head-middle">
@@ -26,41 +356,41 @@
                     <li class="dropdown-content-list">
                         <a href="~/Home/ProDuctDetail" class="content1">Cà phê</a>
                         <ul class="prod-name">
-                            <li class="prod-name-list"><a href="~/ProDuctDetail/CaPheDen">Cà phê đen</a></li>
-                            <li class="prod-name-list"><a href="~/ProDuctDetail/BacSiu">Bạc Sỉu</a></li>
-                            <li class="prod-name-list"><a href="~/ProDuctDetail/CapheCaramel">Cà phê Caramel</a></li>
+                            <li class="prod-name-list"><a href="">Cà phê đen</a></li>
+                            <li class="prod-name-list"><a href="">Bạc Xỉu</a></li>
+                            <li class="prod-name-list"><a href="">Cà phê Caramel</a></li>
                         </ul>
                     </li>
                     <li class="dropdown-content-list">
                         <a href="~/Home/ProDuctDetail" class="content2">Trà</a>
                         <ul class="prod-name">
-                            <li class="prod-name-list"><a href="~/ProDuctDetail/TraDau">Trà Dâu</a></li>
-                            <li class="prod-name-list"><a href="~/ProDuctDetail/TraThachDau">Trà Thạch Dâu</a></li>
-                            <li class="prod-name-list"><a href="~/ProDuctDetail/TraNho">Trà Nho</a></li>
-                            <li class="prod-name-list"><a href="~/ProDuctDetail/TraVai">Trà Vải</a></li>
-                            <li class="prod-name-list"><a href="~/ProDuctDetail/TraDen">Trà Đen</a></li>
+                            <li class="prod-name-list"><a href="">Trà Dâu</a></li>
+                            <li class="prod-name-list"><a href="">Trà Thạch Dâu</a></li>
+                            <li class="prod-name-list"><a href="">Trà Nho</a></li>
+                            <li class="prod-name-list"><a href="">Trà Vải</a></li>
+                            <li class="prod-name-list"><a href="">Trà Đen</a></li>
                         </ul>
                     </li>
                     <li class="dropdown-content-list">
                         <a href="~/Home/ProDuctDetail" class="content1">Đá Xay</a>
                         <ul class="prod-name">
-                            <li class="prod-name-list"><a href="~/ProDuctDetail/OreoDaXay">Oreo Đá Xay</a></li>
-                            <li class="prod-name-list"><a href="~/ProDuctDetail/MiloDaXay">Milo Đá Xay</a></li>
-                            <li class="prod-name-list"><a href="~/ProDuctDetail/SocolaDaXay">Socola Đá Xay</a></li>
-                            <li class="prod-name-list"><a href="~/ProDuctDetail/CaramelDaXay">Caramel Đá Xay</a></li>
-                            <li class="prod-name-list"><a href="~/ProDuctDetail/DauDaXay">Dâu Đá Xay</a></li>
-                            <li class="prod-name-list"><a href="~/ProDuctDetail/MatchaSocolaDaXay">Matcha Socola Đá Xay</a></li>
+                            <li class="prod-name-list"><a href="">Orio Đá Xay</a></li>
+                            <li class="prod-name-list"><a href="">Milo Đá Xay</a></li>
+                            <li class="prod-name-list"><a href="">Socola Đá Xay</a></li>
+                            <li class="prod-name-list"><a href="">Caramel Đá Xay</a></li>
+                            <li class="prod-name-list"><a href="">Dâu Đá Xay</a></li>
+                            <li class="prod-name-list"><a href="">Match Socola Đá Xay</a></li>
                         </ul>
                     </li>
                     <li class="dropdown-content-list">
                         <a href="~/Home/ProDuctDetail" class="content3">Khác</a>
                         <ul class="prod-name">
-                            <li class="prod-name-list"><a href="~/ProDuctDetail/Matcha">Matcha</a></li>
-                            <li class="prod-name-list"><a href="~/ProDuctDetail/ChanhTacMatOng">Chanh Tắc Mật Ong</a></li>
-                            <li class="prod-name-list"><a href="~/ProDuctDetail/SodaChanh">Soda Chanh</a></li>
-                            <li class="prod-name-list"><a href="~/ProDuctDetail/SuaTuoiTranChauDuongNau">Sữa Tươi Trân Châu Đường Nâu</a></li>
-                            <li class="prod-name-list"><a href="~/ProDuctDetail/TraSuaTruyenThong">Trà Sữa Truyền Thống</a></li>
-                            <li class="prod-name-list"><a href="~/ProDuctDetail/TraSuaTranChauTrang">Trà Sữa Trân Châu Trắng</a></li>
+                            <li class="prod-name-list"><a href="">Matcha</a></li>
+                            <li class="prod-name-list"><a href="">Chanh Tắc Mật Ong</a></li>
+                            <li class="prod-name-list"><a href="">Soda Chanh</a></li>
+                            <li class="prod-name-list"><a href="">Sữa Tươi Trân Châu Đường Nâu</a></li>
+                            <li class="prod-name-list"><a href="">Trà Sữa Truyền Thống</a></li>
+                            <li class="prod-name-list"><a href="">Trà Sữa Trân Châu Trắng</a></li>
                         </ul>
                     </li>
                 </ul>
@@ -72,7 +402,7 @@
     </div>
 </header>
 <section>
-    <img src="~/Content/images/banner9.png" class="image1" />
+    <img src="~/Content/images/banner9.png" class="image1"/>
     <img src="~/Content/images/banner8.png" class="image2" />
 
 </section>
@@ -82,8 +412,8 @@
     </div>
     <div class="prod-container">
         <div class="prod">
-            <a href="~/ProDuctDetail/CaPheDen">
-                <img src="~/Content/images/sp1.png" class="prod-item-special2" />
+            <a href="~/Home/ProductCategory">
+                <img src="~/Content/images/sp1.png" class="prod-item" />
                 <h3>Cà phê đen</h3>
                 <p class="prod-description"></p>
                 <p class="prod-price">20.000 VND</p>
@@ -91,23 +421,23 @@
         </div>
 
         <div class="prod">
-            <a href="~/ProDuctDetail/BacSiu">
-                <img src="~/Content/images/sp3.png" class="prod-item-special2" />
-                <h3>Bạc Sỉu</h3>
+            <a href="~/Home/ProductCategory">
+                <img src="~/Content/images/sp3.png" class="prod-item" />
+                <h3>Bạc Xỉu</h3>
                 <p class="prod-description"></p>
                 <p class="prod-price">20.000 VND</p>
             </a>
         </div>
         <div class="prod">
-            <a href="~/ProDuctDetail/SodaChanh">
-                <img src="~/Content/images/sp6.png" class="prod-item-special2" />
+            <a href="~/Home/ProductCategory">
+                <img src="~/Content/images/sp6.png" class="prod-item" />
                 <h3>Soda Chanh</h3>
                 <p class="prod-description"></p>
                 <p class="prod-price">25.000 VND</p>
             </a>
         </div>
         <div class="prod">
-            <a href="~/ProDuctDetail/CapheCaramel">
+            <a href="~/Home/ProductCategory">
                 <img src="~/Content/images/sp7.png" class="prod-item-special1" />
                 <h3>Cà Phê Caramel</h3>
                 <p class="prod-description"></p>
@@ -115,7 +445,7 @@
             </a>
         </div>
         <div class="prod">
-            <a href="~/ProDuctDetail/TraNho">
+            <a href="~/Home/ProductCategory">
                 <img src="~/Content/images/sp9.png" class="prod-item-special2" />
                 <h3>Trà Nho</h3>
                 <p class="prod-description"></p>
@@ -123,31 +453,31 @@
             </a>
         </div>
         <div class="prod">
-            <a href="~/ProDuctDetail/SocolaDaXay">
-                <img src="~/Content/images/sp12.png" class="prod-item-special2" />
+            <a href="~/Home/ProductCategory">
+                <img src="~/Content/images/sp12.png" class="prod-item" />
                 <h3>Socola Đá Xay</h3>
                 <p class="prod-description"></p>
                 <p class="prod-price">35.000 VND</p>
             </a>
         </div>
         <div class="prod">
-            <a href="~/ProDuctDetail/DauDaXay">
-                <img src="~/Content/images/sp14.png" class="prod-item-special3" />
+            <a href="~/Home/ProductCategory">
+                <img src="~/Content/images/sp14.png" class="prod-item-special1" />
                 <h3>Dâu Đá Xay</h3>
                 <p class="prod-description"></p>
                 <p class="prod-price">30.000 VND</p>
             </a>
         </div>
         <div class="prod">
-            <a href="~/ProDuctDetail/MatchaSocolaDaXay">
-                <img src="~/Content/images/sp15.png" class="prod-item-special2" />
+            <a href="~/Home/ProductCategory">
+                <img src="~/Content/images/sp15.png" class="prod-item" />
                 <h3>Matcha Socola Đá Xay</h3>
                 <p class="prod-description"></p>
                 <p class="prod-price">25.000 VND</p>
             </a>
         </div>
         <div class="prod">
-            <a href="~/ProDuctDetail/TraVai">
+            <a href="~/Home/ProductCategory">
                 <img src="~/Content/images/sp18.png" class="prod-item-special2" />
                 <h3>Trà Vải</h3>
                 <p class="prod-description"></p>
@@ -155,8 +485,8 @@
             </a>
         </div>
         <div class="prod">
-            <a href="~/ProDuctDetail/TraDen">
-                <img src="~/Content/images/sp20.png" class="prod-item-special2" />
+            <a href="~/Home/ProductCategory">
+                <img src="~/Content/images/sp20.png" class="prod-item" />
                 <h3>Trà Đen</h3>
                 <p class="prod-description"></p>
                 <p class="prod-price">25.000 VND</p>
