--- a/ThietKeWeb/Views/Home/Register.cshtml
+++ b/ThietKeWeb/Views/Home/Register.cshtml
@@ -15,6 +15,7 @@
           href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
     <title>Signup</title>
     <link href="~/Content/stylesheet.css" rel="stylesheet"/>
+    <link href="~/Content/stylesheet.css" rel="stylesheet" />
 </head>
 <body>
     <div class="signup">
