--- a/ThietKeWeb/Views/Shared/MasterLayout.cshtml
+++ b/ThietKeWeb/Views/Shared/MasterLayout.cshtml
@@ -13,11 +13,14 @@
 
         body {
             font-family: Arial, sans-serif;
+            font-size: 20px;
+            font-weight: bold;
             background-color: #f0f0f0;
+            text-decoration: none;
         }
 
         .header {
-            padding-top: 3px;
+            margin-top: 4px;
             width: 100%;
             background-color: #b22830;
             display: flex;
@@ -26,7 +29,7 @@
         }
 
         .logo {
-            width: 250px;
+            width: 100%;
             height: 80px;
         }
 
@@ -35,10 +38,10 @@
         }
 
         .search {
-            margin-left: 35px;
+            margin-left: 160px;
             border: 1px solid #ccc;
             border-radius: 8px;
-            width: 450px;
+            width: 470px;
             padding: 10px;
             outline: none;
         }
@@ -53,7 +56,8 @@
             width: 70px;
             height: 29px;
             border-radius: 8px;
-            margin: 4px 4px 0 0;
+            padding-top: 4px;
+            background: none;
         }
 
         .search-image {
@@ -72,7 +76,7 @@
             top: -3px;
             background-color: red;
             color: white;
-            border-radius:45%;
+            border-radius: 45%;
         }
 
         ul {
@@ -80,22 +84,25 @@
         }
 
         .menu {
-            margin-left: 35px;
+            margin-left: 8%;
         }
 
         li {
             list-style-type: none;
         }
 
+        a {
+            text-decoration: none;
+        }
+
         .menu a {
             color: white;
             font-size: 18px;
             text-decoration: none;
-            transition: background-color 0.3s ease, transform 0.3s ease, text-shadow 0.3s ease;
         }
 
         #selection {
-            margin-right: 25px;
+            margin-right: 35px;
             color: white;
         }
 
@@ -105,6 +112,27 @@
             margin-right: 4px;
         }
 
+        .image1 {
+            display: block;
+            width: 100%;
+            height: 50%;
+            border-radius: 2px;
+        }
+
+        .image2 {
+            display: block;
+            width: 100%;
+            height: 50%;
+            border-radius: 2px;
+        }
+
+        .ad {
+            clear: both;
+            display: flex;
+            align-items: center;
+        }
+
+
         .list-background {
             display: flex;
             width: 100%;
@@ -113,10 +141,16 @@
         .list {
             display: flex;
             align-items: center;
+            padding-top: 10px;
         }
+
         .menu1 {
             color: white;
-            margin-left: 320px;
+            margin-left: 310px;
+            display: inline-block;
+            block-size: 35px;
+            text-decoration: none;
+            transition: all 0.2s ease;
         }
 
             .menu1:hover {
@@ -127,17 +161,24 @@
         .menu2 {
             margin-left: 150px;
             color: white;
+            text-decoration: none;
+            display: inline-block;
+            block-size: 35px;
+            transition: all 0.2s ease;
         }
 
             .menu2:hover {
                 display: block;
                 background-color: #53382C;
-
             }
 
         .menu3 {
             margin-left: 150px;
             color: white;
+            display: inline-block;
+            block-size: 35px;
+            text-decoration: none;
+            transition: all 0.2s ease;
         }
 
             .menu3:hover {
@@ -155,12 +196,12 @@
             position: absolute;
             list-style-type: none;
             z-index: 1;
-            left: -393px;
+            left: -416px;
             top: 100%;
         }
 
         .dropdown-content-list {
-            width: 312px;
+            width: 356px;
             height: 200px;
             margin-top: 15px;
         }
@@ -172,15 +213,15 @@
         }
 
         .content1 {
-            margin-left: 130px;
+            margin-left: 144px;
         }
 
         .content2 {
-            margin-left: 145px;
+            margin-left: 160px;
         }
 
         .content3 {
-            margin-left: 140px;
+            margin-left: 152px;
         }
 
         .dropdown-content li a:hover {
@@ -193,6 +234,10 @@
             background-color: #53382C;
         }
 
+        .menu2:hover .dropdown-content {
+            display: block;
+        }
+
         .dropdown-content {
             background-color: transparent;
             transition: all 0.6s ease;
@@ -200,6 +245,7 @@
 
         .prod-name {
             display: flow;
+            padding-top: 4px;
         }
 
         .prod-name-list {
@@ -212,7 +258,6 @@
             position: relative;
             text-decoration: none;
             transition: all 0.2s ease;
-            padding-left: 10px;
         }
 
         .prod-name li a:hover {
@@ -223,7 +268,7 @@
         .prod-name li a::after {
             position: absolute;
             content: '\203A';
-            left: -80px;
+            left: -50px;
             opacity: 0;
             transition: opacity 0.3s ease;
         }
@@ -234,18 +279,24 @@
 
         #featureProd {
             text-align: center;
-            background-color: #f0f0f0;
+        }
+
+        .prod-list {
+            width: 100%;
+            background-color: yellowgreen;
+            height: 30px;
+            margin-bottom: 20px;
         }
 
         h2 {
             font-size: 20px;
+            vertical-align: middle;
         }
 
         .prod-container {
             display: flex;
             justify-content: center;
             align-items: center;
-            margin-right: 20px;
         }
 
         .prod {
@@ -259,7 +310,6 @@
         }
 
             .prod-item:hover {
-                letter-spacing: 1px;
                 transform: translateY(-5px);
             }
 
@@ -270,7 +320,6 @@
         }
 
             .prod-item-special1:hover {
-                letter-spacing: 1px;
                 transform: translateY(-5px);
             }
 
@@ -281,7 +330,26 @@
         }
 
             .prod-item-special2:hover {
-                letter-spacing: 1px;
+                transform: translateY(-5px);
+            }
+
+        .prod-item-special3 {
+            width: 120px;
+            height: 150px;
+            transition: transform 0.2s ease;
+        }
+
+            .prod-item-special3:hover {
+                transform: translateY(-5px);
+            }
+
+        .prod-item-special4 {
+            width: 180px;
+            height: 150px;
+            transition: transform 0.2s ease;
+        }
+
+            .prod-item-special4:hover {
                 transform: translateY(-5px);
             }
 
@@ -303,7 +371,7 @@
 
         #footer {
             margin-top: 15px;
-            background-color: orangered;
+            background-color: #5e311e;
             color: white;
             font-size: 18px;
             clear: both;
