--- a/ThietKeWeb/Views/Home/LogIn.cshtml
+++ b/ThietKeWeb/Views/Home/LogIn.cshtml
@@ -14,6 +14,7 @@
 <body>
     <div class="login">
         <h1 class="login-heading">Login</h1>
+        <form>
             <label for="email" class="login-label">Email</label>
             <input type="email" id="email" class="login-input">
             <label for="password" class="login-label">Password</label>
