--- a/ThietKeWeb/Views/Home/Index.cshtml
+++ b/ThietKeWeb/Views/Home/Index.cshtml
@@ -78,7 +78,7 @@
 </section>
 <section id="featureProd">
     <div class="prod-list">
-        <h2>Các thức uống bestseller</h2>
+        <h2>Các thức uống phổ biến hiện nay</h2>
     </div>
     <div class="prod-container">
         <div class="prod">
@@ -165,7 +165,10 @@
     </div>
 </section>
 <footer id="footer">
-    Copy &copy; Ella Designs &amp; Fahasha Designs<br />
-    Powered by Ella and Fahasha
-    <p>About - Services - Portfolio - Contact Us - Term of Trade</p>
+    Copy &copy; @DateTime.Now.Year - Baron<br />
+    Powered by Group Baron
+    <div>
+        <h3 style="font-size:18px">Contact</h3>
+        <p>Ngô Quang Hào - Bạch Thị Thủy Triều - Huỳnh Thiện Tấn - Tạ Yến Phương</p>
+    </div>
 </footer>
