--- a/ThietKeWeb/Views/Home/ProDuctDetail.cshtml
+++ b/ThietKeWeb/Views/Home/ProDuctDetail.cshtml
@@ -256,7 +256,10 @@
     </div>
 </section>
 <footer id="footer">
-    Copy &copy; Ella Designs &amp; Fahasha Designs<br />
-    Powered by Ella and Fahasha
-    <p>About - Services - Portfolio - Contact Us - Term of Trade</p>
+    Copy &copy; @DateTime.Now.Year - Baron<br />
+    Powered by Group Baron
+    <div>
+        <h3 style="font-size:18px">Contact</h3>
+        <p>Ngô Quang Hào - Bạch Thị Thủy Triều - Huỳnh Thiện Tấn - Tạ Yến Phương</p>
+    </div>
 </footer>
