--- a/ThietKeWeb/Views/Shared/MasterLayout.cshtml
+++ b/ThietKeWeb/Views/Shared/MasterLayout.cshtml
@@ -197,11 +197,13 @@
             z-index: 1;
             left: -416px;
             top: 100%;
+            width: 100vw;
         }
 
         .dropdown-content-list {
-            width: 356px;
+            width:100vw;
             height: 200px;
+            text-align:center;
             margin-top: 15px;
         }
 
@@ -209,18 +211,6 @@
             text-decoration: none;
             transition: all 0.2s ease;
             color: #ffcc00;
-        }
-
-        .content1 {
-            margin-left: 144px;
-        }
-
-        .content2 {
-            margin-left: 160px;
-        }
-
-        .content3 {
-            margin-left: 152px;
         }
 
         .dropdown-content li a:hover {
