--- a/ThietKeWeb/Views/Home/Index.cshtml
+++ b/ThietKeWeb/Views/Home/Index.cshtml
@@ -165,10 +165,24 @@
     </div>
 </section>
 <footer id="footer">
-    Copy &copy; @DateTime.Now.Year - Baron<br />
-    Powered by Group Baron
     <div>
-        <h3 style="font-size:18px">Contact</h3>
-        <p>Ngô Quang Hào - Bạch Thị Thủy Triều - Huỳnh Thiện Tấn - Tạ Yến Phương</p>
+        <img src="~/Content/images/fb-icon.png" class="fb-icon-image" />
+        <img src="~/Content/images/ins-icon.png" class="ins-icon-image" />
+        <img src="~/Content/images/tw-icon.png" class="tw-icon-image" />
+    </div>
+    <div>
+        <p>&copy;  @DateTime.Now.Year Baron Coffee.  Powered by Group Baron</p>
+    </div>
+    <div>
+        <img src="~/Content/images/phone-icon.png" class="phone-icon-image" />
+    </div>
+    <div>
+        <p>0245269466</p>
+    </div>
+    <div>
+        <img src="~/Content/images/email-icon.png" class="email-icon-image" />
+    </div>
+    <div>
+        <p>customerservice@Baroncoffee.com.vn</p>
     </div>
 </footer>
