--- a/ThietKeWeb/Views/Home/LogIn.cshtml
+++ b/ThietKeWeb/Views/Home/LogIn.cshtml
@@ -8,7 +8,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Signup</title>
+    <title>Login</title>
     <link href="~/Content/stylesheet1.css" rel="stylesheet" />
 </head>
 <body>
@@ -18,7 +18,7 @@
         <input type="email" id="email" class="login-input">
         <label for="password" class="login-label">Password</label>
         <input type="password" id="password" class="login-input">
-        <button class="login-submit">Login</button>
+        <button type="button" class="login-submit">Login</button>
         <p class="login-forgot">
             <a href="">Forgot password?</a>
             <a href="~/Home/Register" class="login-signup-link">Sign up</a>
