--- a/ThietKeWeb/Views/Shared/MasterLayout.cshtml
+++ b/ThietKeWeb/Views/Shared/MasterLayout.cshtml
@@ -53,7 +53,7 @@
             border: none;
             cursor: pointer;
             width: 70px;
-            height: 29px;
+            height: 35px;
             border-radius: 8px;
             padding-top: 4px;
             background: none;
@@ -83,7 +83,7 @@
         }
 
         .menu {
-            margin-left: 8%;
+            margin-left: 4%;
         }
 
         li {
@@ -201,9 +201,9 @@
         }
 
         .dropdown-content-list {
-            width:100vw;
+            width: 100vw;
             height: 200px;
-            text-align:center;
+            text-align: center;
             margin-top: 15px;
         }
 
@@ -268,6 +268,7 @@
 
         #featureProd {
             text-align: center;
+            background-color:antiquewhite;
         }
 
         .prod-list {
@@ -359,14 +360,51 @@
         }
 
         #footer {
-            margin-top: 15px;
             background-color: #5e311e;
             color: white;
             font-size: 18px;
             clear: both;
             display: flex;
-            justify-content: space-between;
-            align-items: center;
+        }
+        p{
+            margin-top:20px;
+            margin-left:10px;
+            margin-right:30px;
+        }
+
+        .fb-icon-image {
+            width: 35px;
+            height: 35px;
+            margin-bottom: 10px;
+            margin-top: 10px;
+        }
+
+        .ins-icon-image {
+            width: 35px;
+            height: 35px;
+            margin-bottom: 10px;
+            margin-top: 10px;
+        }
+
+        .tw-icon-image {
+            width: 35px;
+            height: 35px;
+            margin-bottom: 10px;
+            margin-top: 10px;
+        }
+
+        .phone-icon-image {
+            width: 35px;
+            height: 35px;
+            margin-bottom: 10px;
+            margin-top: 10px;
+        }
+
+        .email-icon-image {
+            width: 35px;
+            height: 35px;
+            margin-bottom: 10px;
+            margin-top: 10px;
         }
     </style>
 </head>
