--- a/ThietKeWeb/Views/Home/Register.cshtml
+++ b/ThietKeWeb/Views/Home/Register.cshtml
@@ -20,7 +20,7 @@
         <input type="email" id="email" class="signup-input">
         <label for="password" class="signup-label">Password</label>
         <input type="password" id="password" class="signup-input">
-        <button class="signup-submit">Sign up</button>
+        <button type="button" class="signup-submit">Sign up</button>
         <p class="signup-already">
             <span>Already have an account ?</span>
             <a href="~/Home/LogIn" class="signup-login-link">Login</a>
