--- a/ThietKeWeb/Views/Home/Address.cshtml
+++ b/ThietKeWeb/Views/Home/Address.cshtml
@@ -173,7 +173,7 @@
             <img src="~/Content/images/tw-icon.png" class="tw-icon-image" />
         </div>
         <div>
-            <p>&copy;  @DateTime.Now.Year Baron Coffee.  Powered by Group Baron</p>
+            <p>&copy;  2018 Baron Coffee.  Powered by Group Baron</p>
         </div>
         <div>
             <img src="~/Content/images/phone-icon.png" class="phone-icon-image" />
