--- a/ThietKeWeb/Views/Home/Register.cshtml
+++ b/ThietKeWeb/Views/Home/Register.cshtml
@@ -10,17 +10,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Signup</title>
     <link href="~/Content/stylesheet.css" rel="stylesheet" />
+    <script src="~/Content/Register.js"></script>
 </head>
 <body>
     <div class="signup">
         <h1 class="signup-heading">Sign up</h1>
-        <label for="fullname" class="signup-label">Full name</label>
-        <input type="text" id="text" class="signup-input">
         <label for="email" class="signup-label">Email</label>
         <input type="email" id="email" class="signup-input">
+        <span id="email_error"></span>
         <label for="password" class="signup-label">Password</label>
         <input type="password" id="password" class="signup-input">
-        <button type="button" class="signup-submit">Sign up</button>
+        <span id="password_error"></span>
+        <label for="repassword" class="signup-label">Repassword</label>
+        <input type="password" id="repassword" class="signup-input">
+        <span id="repassword_error"></span>
+        <button type="button" onclick="return ValiDate()" class="signup-submit">Sign up</button>
         <p class="signup-already">
             <span>Already have an account ?</span>
             <a href="~/Home/LogIn" class="signup-login-link">Login</a>
